# CPP_babel_2019

./: CMakeLists.txt  README.md  conanfile.txt
Doc/: Documentation.html  index.css  uml.html
audio/: CMakeLists.txt  Record.cpp  Record.hpp  conanfile.txt  main.cpp
client/: CMakeLists.txt
client/inc/: Calling.hpp  Client.hpp  Friend.hpp  MyTcpSocket.hpp  Record.hpp  RecvCall.hpp  WConnection.hpp  WServer.hpp
client/src/: Calling.cpp  Client.cpp  Friend.cpp  MyTcpSocket.cpp  Record.cpp  RecvCall.cpp  WConnection.cpp  WServer.cpp  main.cpp
server/: Makefile
server/include/: Database.hpp  Profile.hpp  Server.hpp  request.hpp
server/src/: Database.cpp  Profile.cpp  Server.cpp  main.cpp
